--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-        <title>Dr. Irshad - Personal CV </title>
+        <title>Umar Farooq - Personal CV </title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -91,7 +91,7 @@
                                    <a class="nav-link" href="#mh-skills">Skills</a>
                                 </li>                                
                                 <li class="nav-item">
-                                   <a class="nav-link" href="#mh-contact">Contact</a>
+                                   <a class="nav-link" href="#mh-footer">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -127,6 +127,7 @@
                                 <ul class="social-icon wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                     <li><a href="https://github.com/Dr-irshad/"><i class="fa fa-github"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/dr-ibrahim/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://scholar.google.com/citations?user=FRQIUUgAAAAJ&hl=en"><i class="fa fa-google"></i></a></li>
                             </div>
                         </div>
                         <div class="col-sm-6">
@@ -318,7 +319,7 @@
           FEATURE PROJECTS
         ===================
         -->
-        <section class="mh-featured-project image-bg featured-img-one">
+        <section class="mh-featured-project image-bg featured-img-one", id="mh-featured-project">
             <div class="img-color-overlay">
                 <div class="container">
                     <div class="row section-separator">
@@ -512,7 +513,7 @@
            FOOTER 3
         ===================
         -->
-        <footer class="mh-footer mh-footer-3">
+        <footer class="mh-footer mh-footer-3" id="mh-footer" >
             <div class="container-fluid">
                 <div class="row section-separator">
                     <div class="col-sm-12 section-title wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">
@@ -590,10 +591,10 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <ul class="social-icon">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                               <li><a href="https://twitter.com/UmarSilicon"><i class="fa fa-twitter"></i></a></li>
-                                               <li><a href="https://github.com/imumarfarooq"><i class="fa fa-github"></i></a></li>
-                                              <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                               <li><a href="https://github.com/Dr-irshad/"><i class="fa fa-github"></i></a></li>
+                                               <li><a href="https://www.linkedin.com/in/dr-ibrahim/"><i class="fa fa-linkedin"></i></a></li>
+                                               <li><a href="https://scholar.google.com/citations?user=FRQIUUgAAAAJ&hl=en"><i class="fa fa-google"></i></a></li>
+                                              
                                             </ul>
                                         </div>
                                     </div>
